# pnm-mctools

./: .coveragerc  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: analysis.yml  build.yml  test.yml
pnm-mctools/: NumericalDifferentiation.py  myunittest.py  spheres_and_cylinders.py  test_Diffusion.py  test_DiluteFlow.py  test_Outflow_Convection.py
pnm_mctools/: Adsorption.py  BoundaryConditions.py  Calibration.py  IO.py  Interpolation.py  Miscellaneous.py  NumericalDifferentiation.py  Operators.py  Reactions.py  ToolSet.py  __init__.py  calibrated_conductance.py  myunittest.py  test_Adsorption.py  test_Convection.py  test_Diffusion.py  test_DiffusionConvection.py  test_DiluteFlow.py  test_MassTransfer.py  test_RateBC_Convection.py  test_VariableBC.py  unittest.py
pnm_mctools/test/: test_Adsorption.py  test_AdsorptionConvection.py  test_Convection.py  test_Diffusion.py  test_DiffusionConvection.py  test_DiluteFlow.py  test_MassTransfer.py  test_Outflow_Convection.py  test_RateBC_Convection.py  test_VariableBC.py
pnm_mctools/testing/: Calibration.py
src/pnm_mctools/: Adsorption.py  BoundaryConditions.py  Calibration.py  IO.py  Interpolation.py  Miscellaneous.py  NumericalDifferentiation.py  Operators.py  Reactions.py  __init__.py
testing/: calibrated_conductance.py
tests/: test_Adsorption.py  test_AdsorptionConvection.py  test_Calibration.py  test_Convection.py  test_Diffusion.py  test_DiffusionConvection.py  test_DiluteFlow.py  test_MassTransfer.py  test_Miscellaneous.py  test_NumericalDifferentiation.py  test_Operators_ddt.py  test_Operators_gradient_delta.py  test_Operators_sum.py  test_Outflow_Convection.py  test_RateBC_Convection.py  test_Reactions.py  test_TaylorArisDispersion.py  test_VariableBC.py
