[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pnm_mctools"
version = "0.2.1"
dependencies = [
    "numpy",
    "openpnm",
    "numpy-stl",
    "scipy",
    "pypardiso",
]
requires-python = ">= 3.9"
authors = [
    {name = "David Rieder", email = "d.r.rieder@tue.nl"},
]
maintainers = [
    {name = "David Rieder", email = "d.r.rieder@tue.nl"},
]
description = "Functionality for modeling multicomponent transport with OpenPNM"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pnm", "image", "analysis", "multicomponent"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/hpc-dave/pnm-mctools"
Repository = "https://github.com/hpc-dave/pnm-mctools"