[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pnm_mctools"
dynamic = ["version", "dependencies"]

requires-python = ">= 3.9"
authors = [
    {name = "David Rieder", email = "d.r.rieder@tue.nl"},
]
maintainers = [
    {name = "David Rieder", email = "d.r.rieder@tue.nl"},
]
description = "Functionality for modeling multicomponent transport with OpenPNM"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pnm", "image", "analysis", "multicomponent"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/pnm_mctools/_version.py"

[project.urls]
Homepage = "https://github.com/hpc-dave/pnm-mctools"
Repository = "https://github.com/hpc-dave/pnm-mctools"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    'ignore::DeprecationWarning'
]